tdf#133555 xmloff: ODF export: don't produce text:drop-down in ODF 1.2

This was added in ODF 1.3 as OFFICE-3881, but it's actually ancient and
was written by OOo 2 already, just somehow forgotten to add it to ODF.

Change-Id: I322fac471c940334f886a7c61769922ae03ee89b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95359
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>